--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
   --default-font: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --logo-font: "Bungee", sans-serif;
   --heading-font: "Raleway", sans-serif;
   --nav-font: "Poppins", sans-serif;
 }
@@ -19,7 +20,7 @@
   --heading-color: #111111;
 
   /* Accent Color - This is the main accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out. */
-  --accent-color: #e03a3c;
+  --accent-color: #d60e04;
 
   /* Contrast Color - This is a color used for text when the background color is one of the heading, accent, or default colors. Its purpose is to ensure proper contrast and readability when placed over these more dominant colors. */
   --contrast-color: #ffffff;
@@ -31,7 +32,7 @@
   --nav-color: #212529;
 
   /* Nav Hover Color - This color is applied to main navmenu links when they are hovered over. */
-  --nav-hover-color: #e03a3c;
+  --nav-hover-color: #d60e04;
 
   /* Nav Dropdown Background Color - This color is used as the background for dropdown boxes that appear when hovering over primary navigation items. */
   --nav-dropdown-background-color: #ffffff;
@@ -40,12 +41,13 @@
   --nav-dropdown-color: #212529;
 
   /* Nav Dropdown Hover Color - Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
-  --nav-dropdown-hover-color: #e03a3c;
+  --nav-dropdown-hover-color: #d60e04;
 }
 
 /* Template Custom Colors */
 :root {
-  --alt-background-color: #1b1b1b;
+  /* --alt-background-color: #1b1b1b; */
+  --alt-background-color: #3a5bc1;
 }
 
 /* Smooth scroll */
@@ -99,21 +101,26 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
+  max-height: 50px;
   margin-right: 8px;
 }
 
 .header .logo h1 {
   font-size: 32px;
   margin: 0;
-  font-weight: 700;
-  color: var(--heading-color);
+  font-weight: 400;
+  font-style: normal;
+  font-family: "Bungee", sans-serif;
+  color: var(--accent-color);
 }
 
 .header .logo span {
   font-size: 32px;
-  font-weight: 700;
-  color: var(--accent-color);
+  margin: 0;
+  font-weight: 400;
+  font-style: normal;
+  font-family: "Bungee", sans-serif;
+  color: var(--alt-background-color);
 }
 
 .header .btn-getstarted,
@@ -546,7 +553,7 @@ h6 {
 
 .footer .footer-newsletter .error-message {
   display: none;
-  background: #df1529;
+  background: #d60e04;
   color: #ffffff;
   text-align: left;
   padding: 15px;
@@ -944,7 +951,7 @@ section,
 
 .about .icon-box i {
   font-size: 40px;
-  color: var(--accent-color);
+  color: var(--contrast-color);
   margin-bottom: 10px;
 }
 
@@ -955,18 +962,19 @@ section,
 }
 
 .about .icon-box h4 a {
-  color: var(--heading-color);
+  color: var(--contrast-color);
   transition: 0.3s;
 }
 
 .about .icon-box p {
   font-size: 15px;
-  color: color-mix(in srgb, var(--default-color), transparent 40%);
+  /* color: color-mix(in srgb, var(--default-color), transparent 40%); */
+  color: var(--contrast-color);
   margin-bottom: 0;
 }
 
 .about .icon-box:hover h4 a {
-  color: var(--accent-color);
+  color: var(--contrast-color);
 }
 
 /*--------------------------------------------------------------
@@ -1121,7 +1129,7 @@ section,
   font-size: 36px;
   line-height: 0;
   margin-right: 30px;
-  color: var(--accent-color);
+  color: var(--contrast-color);
 }
 
 .services .service-item .title {
@@ -1145,16 +1153,16 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Portfolio Section
+# Product Section
 --------------------------------------------------------------*/
-.portfolio .portfolio-filters {
+.product .product-filters {
   padding: 0;
   margin: 0 auto 20px auto;
   list-style: none;
   text-align: center;
 }
 
-.portfolio .portfolio-filters li {
+.product .product-filters li {
   cursor: pointer;
   display: inline-block;
   padding: 0;
@@ -1166,36 +1174,36 @@ section,
   transition: all 0.3s ease-in-out;
 }
 
-.portfolio .portfolio-filters li:hover,
-.portfolio .portfolio-filters li.filter-active {
+.product .product-filters li:hover,
+.product .product-filters li.filter-active {
   color: var(--accent-color);
 }
 
-.portfolio .portfolio-filters li:first-child {
+.product .product-filters li:first-child {
   margin-left: 0;
 }
 
-.portfolio .portfolio-filters li:last-child {
+.product .product-filters li:last-child {
   margin-right: 0;
 }
 
 @media (max-width: 575px) {
-  .portfolio .portfolio-filters li {
+  .product .product-filters li {
     font-size: 14px;
     margin: 0 5px;
   }
 }
 
-.portfolio .portfolio-content {
+.product .product-content {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio .portfolio-content img {
+.product .product-content img {
   transition: 0.3s;
 }
 
-.portfolio .portfolio-content .portfolio-info {
+.product .product-content .product-info {
   opacity: 0;
   position: absolute;
   inset: 0;
@@ -1205,7 +1213,7 @@ section,
   padding: 15px;
 }
 
-.portfolio .portfolio-content .portfolio-info h4 {
+.product .product-content .product-info h4 {
   font-size: 14px;
   padding: 5px 10px;
   font-weight: 400;
@@ -1214,7 +1222,7 @@ section,
   background-color: var(--accent-color);
 }
 
-.portfolio .portfolio-content .portfolio-info p {
+.product .product-content .product-info p {
   position: absolute;
   bottom: 10px;
   text-align: center;
@@ -1226,8 +1234,8 @@ section,
   color: rgba(255, 255, 255, 0.8);
 }
 
-.portfolio .portfolio-content .portfolio-info .preview-link,
-.portfolio .portfolio-content .portfolio-info .details-link {
+.product .product-content .product-info .preview-link,
+.product .product-content .product-info .details-link {
   position: absolute;
   left: calc(50% - 40px);
   font-size: 26px;
@@ -1237,22 +1245,22 @@ section,
   line-height: 1.2;
 }
 
-.portfolio .portfolio-content .portfolio-info .preview-link:hover,
-.portfolio .portfolio-content .portfolio-info .details-link:hover {
+.product .product-content .product-info .preview-link:hover,
+.product .product-content .product-info .details-link:hover {
   color: var(--accent-color);
 }
 
-.portfolio .portfolio-content .portfolio-info .details-link {
+.product .product-content .product-info .details-link {
   left: 50%;
   font-size: 34px;
   line-height: 0;
 }
 
-.portfolio .portfolio-content:hover .portfolio-info {
+.product .product-content:hover .product-info {
   opacity: 1;
 }
 
-.portfolio .portfolio-content:hover img {
+.product .product-content:hover img {
   transform: scale(1.1);
 }
 
@@ -1610,6 +1618,10 @@ section,
   padding: 25px 15px;
 }
 
+.team .team-member .member-info a {
+  color: color-mix(in srgb, var(--default-color), transparent 40%);
+}
+
 .team .team-member .member-info h4 {
   font-weight: 700;
   margin-bottom: 5px;
@@ -1681,7 +1693,7 @@ section,
 
 .contact .php-email-form .error-message {
   display: none;
-  background: #df1529;
+  background: #d60e04;
   color: #ffffff;
   text-align: left;
   padding: 15px;
@@ -2212,19 +2224,19 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Portfolio Details Section
+# product Details Section
 --------------------------------------------------------------*/
-.portfolio-details .portfolio-details-slider img {
+.product-details .product-details-slider img {
   width: 100%;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination {
+.product-details .product-details-slider .swiper-pagination {
   margin-top: 20px;
   position: relative;
 }
 
-.portfolio-details
-  .portfolio-details-slider
+.product-details
+  .product-details-slider
   .swiper-pagination
   .swiper-pagination-bullet {
   width: 12px;
@@ -2233,20 +2245,20 @@ section,
   opacity: 1;
 }
 
-.portfolio-details
-  .portfolio-details-slider
+.product-details
+  .product-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
   background-color: var(--accent-color);
 }
 
-.portfolio-details .portfolio-info {
+.product-details .product-info {
   padding: 30px;
   box-shadow: 0px 0 30px
     color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
-.portfolio-details .portfolio-info h3 {
+.product-details .product-info h3 {
   font-size: 22px;
   font-weight: 700;
   margin-bottom: 20px;
@@ -2255,27 +2267,27 @@ section,
     color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
-.portfolio-details .portfolio-info ul {
+.product-details .product-info ul {
   list-style: none;
   padding: 0;
   font-size: 15px;
 }
 
-.portfolio-details .portfolio-info ul li + li {
+.product-details .product-info ul li + li {
   margin-top: 10px;
 }
 
-.portfolio-details .portfolio-description {
+.product-details .product-description {
   padding-top: 30px;
 }
 
-.portfolio-details .portfolio-description h2 {
+.product-details .product-description h2 {
   font-size: 26px;
   font-weight: 700;
   margin-bottom: 20px;
 }
 
-.portfolio-details .portfolio-description p {
+.product-details .product-description p {
   padding: 0;
   color: color-mix(in srgb, var(--default-color), transparent 30%);
 }
@@ -2415,9 +2427,9 @@ section,
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
-}
+/* .starter-section { */
+/* Add your styles here */
+/* } */
 
 /*--------------------------------------------------------------
 # Widgets
